# a-townchain-os

./: .env.example  .gitignore  AGENT_MANIFEST.md  AGENT_MASTERRULES.md  ATCLANG_FIRST.md  CHANGELOG.md  CONNECTION_MAP.md  CONTRIBUTING.md  Dockerfile  ECOSYSTEM.md  ECOSYSTEM_BRAIN.md  GENESIS_COMMUNICATION_LAYER_v2.md  KAI_OS_SUMMARY.py  KERNEL_FROM_SCRATCH_PLAN.md  KONSOLIDIERUNGS_MATRIX.md  LICENSE  MASTER_TODO.md  MILESTONES.md  MONOREPO_README.md  NAMING_CONVENTIONS.md  OS_BARE_METAL_GAP_ANALYSIS.md  README.md  REALITY_STATUS.md  ROADMAP.md  ROADMAP_PYTHON_TO_OS.md  SECURITY.md  SPRINT_ROADMAP.md  STATUS.md  SYNC_PROTOCOL.md  TODO.md  VERSION  atc_issues_summary.py  conftest.py  docker-compose.yml  pyproject.toml  requirements-kai.txt  requirements.txt  start.py  sync_report.html
aistudio/: package-lock.json  package.json
atclang/: README.md  type_checker.py
atcpkg/: manager.py
backend/: __init__.py  requirements.txt
blockchain/: smart_contract_registry.py  smart_contracts.py
ci-cd-fix/: README.md  apply-fix.sh  ci-cd.yml  codeql.yml
config/: ai_models.json  mainnet_genesis.json  settings.json
core/: ai_kernel.py  atcfs.py  kernel.py
docker/: Dockerfile.backend  Dockerfile.bootstrap  Dockerfile.gateway  Dockerfile.node  Makefile  docker-compose.testnet.yml  prometheus.yml
docs/: AGENT_COORDINATION.md  AGENT_POLICY.md  ATC_93_BYTECODE_SPEC.md  CLEANUP_LOG.md  DECISIONS_REGISTER.md  GENESIS_COMMUNICATION_LAYER_v2.md  README.md  REALITY_CHECK_2026-07-06.md  ROADMAP.md  STATUS.md  SYNC_REPORT.md  genesis_wallet.md  kai-os-wiki.md  test-write.md
(+243 files in other folders)
